// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: THouseCellBase
message THouseCellBase
{	
	
	
	repeated THouseCellDefine THouseCell = 1; // THouseCell

}

// Defined in table: THouseCell
message THouseCellDefine
{	
	
	
	optional uint32 Id = 1; // ID
	
	
	optional uint32 Type = 2; // 类型
	
	
	optional uint32 MaxLevel = 3; // 最大等级
	
	
	optional uint32 ProduceGold = 4; // 产出金币
	
	
	optional uint32 ProduceTime = 5; // 生产时间
	
	
	optional uint32 LevelUpCost = 6; // 升级花费
	
	
	optional string Des = 7; // 描述

}

