// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: THouseBase
message THouseBase
{	
	
	
	repeated THouseDefine THouse = 1; // THouse

}

// Defined in table: THouse
message THouseDefine
{	
	
	
	optional uint32 Id = 1; // 房屋ID*100+房屋等级
	
	
	optional uint32 Type = 2; 
	
	
	optional uint32 MaxLevel = 3; // 房屋最大等级
	
	
	optional uint32 MaxCells = 4; // 包含区域数（暂时无用字段）
	
	
	optional string Cells = 5; // 区域类型
	
	
	optional uint32 LevelUpCost = 6; // 升级花费
	
	
	optional string Des = 7; // 描述

}

